styling jumbotron responsive

--- a/scss/modules/jumbotron/_jumbotron.scss
+++ b/scss/modules/jumbotron/_jumbotron.scss
@@ -8,6 +8,7 @@
     h1 {
         font-size: 3.1rem;
         letter-spacing: 5%;
+        text-shadow: 1px 4px 4px #00000090;
     }
 
     img#earth {
