--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,7 @@ html {
 .jumbotron h1 {
   font-size: 3.1rem;
   letter-spacing: 5%;
+  text-shadow: 1px 4px 4px rgba(0, 0, 0, 0.5647058824);
 }
 .jumbotron img#earth {
   width: 27rem;
@@ -55,6 +56,40 @@ html {
 }
 .jumbotron a#icon-arrow:hover {
   transform: translateY(-5px);
+}
+
+@media (max-width: 750px) {
+  .jumbotron h1 {
+    font-size: 2.9rem;
+  }
+  .jumbotron img#earth {
+    width: 22rem;
+    height: 22rem;
+  }
+  .jumbotron p {
+    font-size: 1.2rem;
+  }
+}
+@media (max-width: 550px) {
+  .jumbotron h1 {
+    font-size: 2.7rem;
+  }
+  .jumbotron img#earth {
+    width: 19rem;
+    height: 19rem;
+  }
+}
+@media (max-width: 368px) {
+  .jumbotron h1 {
+    font-size: 2.1rem;
+  }
+  .jumbotron img#earth {
+    width: 17rem;
+    height: 17rem;
+  }
+  .jumbotron p {
+    font-size: 1rem;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
