--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,3 +4,7 @@
 // Jumbotron
 @use 'modules/jumbotron/jumbotron';
 @use 'modules/jumbotron/jumbotronResponsive';
+
+// Content Window
+// General
+@use 'modules/content-window/general/contentWindowGeneral';
