resize image earth

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,3 +8,4 @@
 // Content Window
 // General
 @use 'modules/content-window/general/contentWindowGeneral';
+@use 'modules/content-window/general/contentWindowGeneralResponsive';
