styling content heading responsive

--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -18,3 +18,9 @@ html {
     box-sizing: border-box;
     overflow: hidden;
 }
+
+@media (max-width: 750px) {
+    .container {
+        padding: 50px 10px;
+    }
+}
