--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,11 @@ html {
   overflow: hidden;
 }
 
+@media (max-width: 750px) {
+  .container {
+    padding: 50px 10px;
+  }
+}
 .jumbotron {
   height: 95vh;
   display: flex;
@@ -98,22 +103,22 @@ html {
   box-shadow: 3px 4px 10px rgba(0, 0, 0, 0.4392156863);
   background-color: white;
 }
-.content-window .toggle {
-  display: none;
-}
 .content-window .heading {
   padding: 2rem 5rem;
   background-color: #EAEAEA;
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
 }
-.content-window .heading ul {
+.content-window .heading .toggle {
+  display: none;
+}
+.content-window .heading ul.heading-menu {
   display: flex;
   justify-content: center;
   gap: 5rem;
   align-items: center;
 }
-.content-window .heading ul li {
+.content-window .heading ul.heading-menu li {
   font-size: 1.3rem;
   font-weight: 600;
   color: #3d3d3d;
@@ -123,9 +128,86 @@ html {
   border-radius: 20px;
   transition: all 0.2s ease;
 }
-.content-window .heading ul li:hover, .content-window .heading ul li.active {
+.content-window .heading ul.heading-menu li:hover, .content-window .heading ul.heading-menu li.active {
   background-color: #2D2C2C;
   color: #11E2FF;
+}
+
+@media (max-width: 1100px) {
+  .content-window {
+    overflow: hidden;
+  }
+  .content-window .heading {
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+  }
+  .content-window .heading .toggle {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 5px;
+    align-items: center;
+    width: 27px;
+    height: 25px;
+    padding: 5px;
+    border: 3px solid black;
+    border-radius: 10px;
+    box-shadow: 1px 2px 7px rgba(0, 0, 0, 0.5647058824);
+    cursor: pointer;
+  }
+  .content-window .heading .toggle span {
+    width: 100%;
+    height: 4px;
+    background-color: black;
+    transition: all 0.3s ease;
+  }
+  .content-window .heading .toggle.clicked span:first-child {
+    transform-origin: 0 100%;
+    transform: rotateZ(45deg) translateX(2px) translateY(-2px);
+  }
+  .content-window .heading .toggle.clicked span:nth-child(2) {
+    transform: scale(0);
+  }
+  .content-window .heading .toggle.clicked span:last-child {
+    transform-origin: 0 0;
+    transform: rotateZ(-45deg) translateY(5px) translateX(1px);
+  }
+  .content-window .heading ul.heading-menu {
+    background-color: #EAEAEA;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+    padding: 20px 0;
+    transform: translateY(-300px);
+    opacity: 0;
+    transition: all 0.4s ease;
+  }
+  .content-window .heading ul.heading-menu.clicked {
+    transform: translateY(95px);
+    opacity: 1;
+  }
+}
+@media (max-width: 750px) {
+  .content-window .heading ul.heading-menu li {
+    font-size: 1.1rem;
+  }
+}
+@media (max-width: 550px) {
+  .content-window .heading {
+    padding: 2rem;
+  }
+  .content-window .heading .toggle {
+    width: 27px;
+    height: 23px;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
