--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,7 @@ html {
   }
 }
 .content-window {
-  height: 500px;
+  height: 100%;
   width: 100%;
   border-radius: 30px;
   box-shadow: 3px 4px 10px rgba(0, 0, 0, 0.4392156863);
@@ -208,6 +208,51 @@ html {
     width: 27px;
     height: 23px;
   }
+}
+.gempa-terkini {
+  padding: 2rem;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.gempa-terkini .left {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+.gempa-terkini .left h2 {
+  font-size: 2.1rem;
+  letter-spacing: 5%;
+  font-weight: 600;
+  margin-bottom: 2.3rem;
+}
+.gempa-terkini .left .info-list {
+  margin-bottom: 2rem;
+}
+.gempa-terkini .left .info-list p {
+  font-size: 1.25rem;
+  letter-spacing: 5%;
+}
+.gempa-terkini .left a button {
+  font-size: 1.37rem;
+  font-weight: 600;
+  letter-spacing: 5%;
+  padding: 10px 20px;
+  border-radius: 20px;
+  background-color: #ffffff;
+  border: 2px solid black;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.gempa-terkini .left a button:hover {
+  background-color: #2D2C2C;
+  border: 2px solid #11E2FF;
+  color: #11E2FF;
+}
+.gempa-terkini .right img {
+  width: 30rem;
+  height: 30rem;
 }
 
 /*# sourceMappingURL=main.css.map */
