--- a/scss/modules/content-window/general/_contentWindowGeneral.scss
+++ b/scss/modules/content-window/general/_contentWindowGeneral.scss
@@ -1,7 +1,7 @@
 @use '../../../variables';
 
 .content-window {
-    height: 500px;
+    height: 100%;
     width: 100%;
     border-radius: 30px;
     box-shadow: 3px 4px 10px #00000070;
