--- a/css/main.css
+++ b/css/main.css
@@ -255,4 +255,49 @@ html {
   height: 30rem;
 }
 
+@media (max-width: 1100px) {
+  .gempa-terkini {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 3rem;
+  }
+}
+@media (max-width: 750px) {
+  .gempa-terkini .left h2 {
+    font-size: 1.9rem;
+  }
+  .gempa-terkini .left .info-list p {
+    font-size: 1.1rem;
+  }
+  .gempa-terkini .left a button {
+    font-size: 1.1rem;
+  }
+  .gempa-terkini .right img {
+    width: 27rem;
+    height: 27rem;
+  }
+}
+@media (max-width: 500px) {
+  .gempa-terkini .left h2 {
+    font-size: 1.5rem;
+  }
+  .gempa-terkini .left .info-list p {
+    font-size: 1rem;
+  }
+  .gempa-terkini .left a button {
+    font-size: 1rem;
+  }
+  .gempa-terkini .right img {
+    width: 20rem;
+    height: 20rem;
+  }
+}
+@media (max-width: 400px) {
+  .gempa-terkini .right img {
+    width: 15rem;
+    height: 15rem;
+  }
+}
+
 /*# sourceMappingURL=main.css.map */
