--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,3 +13,6 @@
 // Gempa Terkini
 @use 'modules/content-window/terkini/terkini';
 @use 'modules/content-window/terkini/terkiniResponsive';
+
+// Gempa Dirasakan
+@use 'modules/content-window/dirasakan/dirasakan';
