--- a/css/main.css
+++ b/css/main.css
@@ -299,5 +299,66 @@ html {
     height: 15rem;
   }
 }
+.gempa-dirasakan {
+  padding: 4rem 2rem;
+}
+.gempa-dirasakan h2 {
+  text-align: center;
+  font-size: 2.1rem;
+  font-weight: 600;
+  letter-spacing: 5%;
+}
+.gempa-dirasakan hr {
+  width: 150px;
+  height: 2px;
+  margin: 2rem auto;
+  background-color: #808080;
+}
+.gempa-dirasakan .list-gempa {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  row-gap: 2rem;
+  column-gap: 10px;
+  width: 100%;
+}
+.gempa-dirasakan .list-gempa .card-gempa {
+  padding: 15px;
+  max-width: 30%;
+  min-width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.gempa-dirasakan .list-gempa .card-gempa img {
+  margin-bottom: 15px;
+  width: 60px;
+  height: 60px;
+}
+.gempa-dirasakan .list-gempa .card-gempa .info-list {
+  text-align: center;
+  margin-bottom: 10px;
+}
+.gempa-dirasakan .list-gempa .card-gempa .info-list p {
+  font-size: 1rem;
+  letter-spacing: 5%;
+}
+.gempa-dirasakan .list-gempa .card-gempa button {
+  font-size: 1rem;
+  font-weight: 600;
+  letter-spacing: 5%;
+  padding: 10px;
+  border-radius: 30px;
+  border: 2px solid black;
+  background-color: white;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.gempa-dirasakan .list-gempa .card-gempa button:hover {
+  background-color: #2D2C2C;
+  color: #11E2FF;
+  border: 2px solid #11E2FF;
+}
 
 /*# sourceMappingURL=main.css.map */
