--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,3 +16,4 @@
 
 // Gempa Dirasakan
 @use 'modules/content-window/dirasakan/dirasakan';
+@use 'modules/content-window/dirasakan/dirasakanResponsive';
