--- a/scss/modules/content-window/dirasakan/_dirasakan.scss
+++ b/scss/modules/content-window/dirasakan/_dirasakan.scss
@@ -1,6 +1,6 @@
 @use '../../../variables';
 
-.gempa-dirasakan {
+.gempa-dirasakan-m5 {
     // background-color: #ff000060;
     padding: 4rem 2rem;
 
