finish styling credits

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,3 +17,7 @@
 // Gempa Dirasakan
 @use 'modules/content-window/dirasakan/dirasakan';
 @use 'modules/content-window/dirasakan/dirasakanResponsive';
+
+// Credits
+@use 'modules/content-window/credits/credits';
+@use 'modules/content-window/credits/creditsResponsive';
