--- a/css/main.css
+++ b/css/main.css
@@ -377,5 +377,51 @@ html {
     font-size: 0.8rem;
   }
 }
+.credits {
+  padding: 2rem;
+}
+.credits h2 {
+  text-align: center;
+  font-size: 2.1rem;
+  font-weight: 600;
+  letter-spacing: 5%;
+  margin-bottom: 2rem;
+}
+.credits ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+.credits ul li a {
+  font-size: 1.2rem;
+  font-weight: 600;
+  letter-spacing: 5%;
+  color: black;
+  text-decoration: underline;
+  transition: all 0.2s ease;
+}
+.credits ul li a:hover {
+  color: #11E2FF;
+}
+
+@media (max-width: 1100px) {
+  .credits {
+    height: 50vh;
+  }
+}
+@media (max-width: 450px) {
+  .credits h2 {
+    font-size: 1.9rem;
+  }
+}
+@media (max-width: 400px) {
+  .credits h2 {
+    font-size: 1.7rem;
+  }
+  .credits ul li a {
+    font-size: 1rem;
+  }
+}
 
 /*# sourceMappingURL=main.css.map */
