--- a/scss/modules/content-window/general/_contentWindowGeneral.scss
+++ b/scss/modules/content-window/general/_contentWindowGeneral.scss
@@ -29,6 +29,7 @@
                 font-size: 1.3rem;
                 font-weight: 600;
                 color: #3d3d3d;
+                height: fit-content;
                 cursor: pointer;
                 padding: 15px 30px;
                 text-align: center;
