--- a/scss/modules/content-window/dirasakan/_dirasakan.scss
+++ b/scss/modules/content-window/dirasakan/_dirasakan.scss
@@ -3,6 +3,9 @@
 .gempa-dirasakan-m5 {
     // background-color: #ff000060;
     padding: 4rem 2rem;
+    overflow-y: scroll;
+    height: 80vh;
+    box-sizing: border-box;
 
     h2 {
         text-align: center;
