--- a/scss/modules/content-window/terkini/_terkini.scss
+++ b/scss/modules/content-window/terkini/_terkini.scss
@@ -1,11 +1,14 @@
 @use '../../../variables';
 
 .gempa-terkini {
-    // background-color: #ff000070;
-    padding: 2rem;
-    height: 100%;
+    z-index: 99;
+    padding: 2rem 4rem;
+    height: 80vh;
+    box-sizing: border-box;
+    overflow-y: scroll;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 
     .left {
         // background-color: yellow;
@@ -54,8 +57,6 @@
     }
 
     .right {
-        // background-color: green;
-
         img {
             width: 30rem;
             height: 30rem;
