--- a/scss/modules/content-window/terkini/_terkiniResponsive.scss
+++ b/scss/modules/content-window/terkini/_terkiniResponsive.scss
@@ -1,9 +1,24 @@
 @media (max-width: 1100px) {
     .gempa-terkini {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 3rem;
+        padding: 4rem 2rem;
+        display: block;
+        // flex-direction: column;
+        // justify-content: center;
+        // align-items: center;
+        // gap: 3rem;
+
+        .left {
+            margin-bottom: 2rem;
+            align-items: center;
+        }
+
+        .right {
+            display: flex;
+
+            img {
+                margin: auto;
+            }
+        }
     }
 }
 
@@ -38,6 +53,8 @@
 
 @media (max-width: 500px) {
     .gempa-terkini {
+        padding: 4rem 2rem;
+
         .left {
             h2 {
                 font-size: 1.5rem;
@@ -67,6 +84,8 @@
 
 @media (max-width: 400px) {
     .gempa-terkini {
+        padding: 4rem 2rem;
+
         .right {
             img {
                 width: 15rem;
