--- a/scss/modules/content-window/dirasakan/_dirasakan.scss
+++ b/scss/modules/content-window/dirasakan/_dirasakan.scss
@@ -34,8 +34,9 @@
         .card-gempa {
             // background-color: #ffff0060;
             padding: 15px;
-            max-width: 30%;
-            min-width: 300px;
+            width: 300px;
+            height: 300px;
+            overflow-y: scroll;
             display: flex;
             flex-direction: column;
             align-items: center;
