--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,3 +21,6 @@
 // Credits
 @use 'modules/content-window/credits/credits';
 @use 'modules/content-window/credits/creditsResponsive';
+
+// maps
+@use 'modules/maps/maps';
