--- a/css/main.css
+++ b/css/main.css
@@ -453,5 +453,23 @@ html {
     font-size: 1rem;
   }
 }
+.leaflet-container {
+  height: 400px;
+  width: 600px;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.maps-container {
+  width: 100vw;
+  height: 100vh;
+  box-sizing: border-box;
+  background: linear-gradient(to bottom, #EAEAEA, #808080);
+  padding: 2rem;
+}
+.maps-container #map {
+  width: 100%;
+  height: 100%;
+}
 
 /*# sourceMappingURL=main.css.map */
