cleaning unused codes, add readme.md, add link source code

--- a/scss/modules/content-window/credits/_credits.scss
+++ b/scss/modules/content-window/credits/_credits.scss
@@ -11,7 +11,7 @@
         font-size: 2.1rem;
         font-weight: 600;
         letter-spacing: 5%;
-        margin-bottom: 2rem;
+        margin-bottom: 1rem;
     }
 
     ul {
@@ -19,6 +19,7 @@
         flex-direction: column;
         align-items: center;
         gap: 10px;
+        margin-bottom: 2rem;
 
         li {
             a {
@@ -33,6 +34,21 @@
                     color: variables.$primaryBlue;
                 }
             }
+        }
+    }
+
+    a.source-code {
+        display: block;
+        font-size: 1.2rem;
+        font-weight: 600;
+        letter-spacing: 5%;
+        color: black;
+        text-decoration: underline;
+        transition: all 0.2s ease;
+        text-align: center;
+
+        &:hover {
+            color: variables.$primaryBlue;
         }
     }
 }
