--- a/css/main.css
+++ b/css/main.css
@@ -420,13 +420,14 @@ html {
   font-size: 2.1rem;
   font-weight: 600;
   letter-spacing: 5%;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 .credits ul {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 10px;
+  margin-bottom: 2rem;
 }
 .credits ul li a {
   font-size: 1.2rem;
@@ -437,6 +438,19 @@ html {
   transition: all 0.2s ease;
 }
 .credits ul li a:hover {
+  color: #11E2FF;
+}
+.credits a.source-code {
+  display: block;
+  font-size: 1.2rem;
+  font-weight: 600;
+  letter-spacing: 5%;
+  color: black;
+  text-decoration: underline;
+  transition: all 0.2s ease;
+  text-align: center;
+}
+.credits a.source-code:hover {
   color: #11E2FF;
 }
 
