menghapus overflow-y scroll

--- a/scss/modules/content-window/credits/_credits.scss
+++ b/scss/modules/content-window/credits/_credits.scss
@@ -3,8 +3,8 @@
 .credits {
     padding: 2rem;
     box-sizing: border-box;
-    height: 80vh;
-    overflow-y: scroll;
+    height: fit-content;
+    // overflow-y: scroll;
 
     h2 {
         text-align: center;
