--- a/css/main.css
+++ b/css/main.css
@@ -213,9 +213,8 @@ html {
 .gempa-terkini {
   z-index: 99;
   padding: 2rem 4rem;
-  height: 80vh;
+  height: fit-content;
   box-sizing: border-box;
-  overflow-y: scroll;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -320,8 +319,7 @@ html {
 }
 .gempa-dirasakan-m5 {
   padding: 4rem 2rem;
-  overflow-y: scroll;
-  height: 80vh;
+  height: fit-content;
   box-sizing: border-box;
 }
 .gempa-dirasakan-m5 h2 {
@@ -340,7 +338,7 @@ html {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   row-gap: 2rem;
   column-gap: 10px;
   width: 100%;
@@ -348,8 +346,6 @@ html {
 .gempa-dirasakan-m5 .list-gempa .card-gempa {
   padding: 15px;
   width: 300px;
-  height: 300px;
-  overflow-y: scroll;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -412,8 +408,7 @@ html {
 .credits {
   padding: 2rem;
   box-sizing: border-box;
-  height: 80vh;
-  overflow-y: scroll;
+  height: fit-content;
 }
 .credits h2 {
   text-align: center;
