--- a/scss/modules/content-window/dirasakan/_dirasakan.scss
+++ b/scss/modules/content-window/dirasakan/_dirasakan.scss
@@ -2,8 +2,7 @@
 
 .gempa-dirasakan-m5 {
     padding: 4rem 2rem;
-    overflow-y: scroll;
-    height: 80vh;
+    height: fit-content;
     box-sizing: border-box;
 
     h2 {
@@ -24,7 +23,7 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        align-items: center;
+        align-items: flex-start;
         row-gap: 2rem;
         column-gap: 10px;
         width: 100%;
@@ -32,8 +31,6 @@
         .card-gempa {
             padding: 15px;
             width: 300px;
-            height: 300px;
-            overflow-y: scroll;
             display: flex;
             flex-direction: column;
             align-items: center;
