change credits content height

--- a/scss/modules/content-window/credits/_credits.scss
+++ b/scss/modules/content-window/credits/_credits.scss
@@ -3,8 +3,7 @@
 .credits {
     padding: 2rem;
     box-sizing: border-box;
-    height: fit-content;
-    // overflow-y: scroll;
+    height: 80vh;
 
     h2 {
         text-align: center;
