--- a/css/main.css
+++ b/css/main.css
@@ -408,7 +408,7 @@ html {
 .credits {
   padding: 2rem;
   box-sizing: border-box;
-  height: fit-content;
+  height: 80vh;
 }
 .credits h2 {
   text-align: center;
